--- a/package.json
+++ b/package.json
@@ -1,84 +1,44 @@
 {
-	"name": "goto-package",
-	"displayName": "goto-package",
-	"description": "Go to package folder quickly",
-	"publisher": "liajoy",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/liajoy/vscode-goto-package"
-	},
-	"version": "0.1.0",
-	"engines": {
-		"vscode": "^1.30.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"keywords": [
-		"npm",
-		"package.json",
-		"navigate",
-		"node_modules"
-	],
-	"activationEvents": [
-		"onLanguage:json",
-		"onCommand:gotoPackage.gotoPickPackage"
-	],
-	"capabilities": {
-		"codeLensProvider": {
-			"resolveProvider": "true"
-		}
-	},
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "gotoPackage.gotoPickPackage",
-				"title": "gotoPackage: Pick and go to a package"
-			},
-			{
-				"command": "gotoPackage.gotoPackage",
-				"title": "gotoPackage: Go to selected package"
-			},
-			{
-				"command": "gotoPackage.gotoNpmPage",
-				"title": "gotoPackage: Visit page of npm"
-			}
-		],
-		"keybindings": [
-			{
-				"command": "gotoPackage.gotoPackage",
-				"key": "F12",
-				"mac": "F12",
-				"when": "editorTextFocus"
-			}
-		],
-		"configuration": [
-			{
-				"title": "Goto Package",
-				"properties": {
-					"GotoPackage.searchNodeModules": {
-						"type": "boolean",
-						"default": false,
-						"description": "Search packages in node_modules",
-						"scope": "window"
-					}
-				}
-			}
-		]
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "npm run compile && node ./node_modules/vscode/bin/test"
-	},
-	"devDependencies": {
-		"typescript": "^3.1.4",
-		"vscode": "^1.1.25",
-		"tslint": "^5.8.0",
-		"@types/node": "^8.10.25",
-		"@types/mocha": "^2.2.42"
-	}
+    "name": "goto-package",
+    "displayName": "Goto Package",
+    "description": "Go to npm/composer package folder quickly",
+    "publisher": "ctf0",
+    "repository": "https://github.com/ctf0/vscode-goto-package",
+    "version": "0.0.1",
+    "engines": {
+        "vscode": "^1.41.0"
+    },
+    "categories": [
+        "Other"
+    ],
+    "keywords": [
+        "npm",
+        "composer",
+        "navigate"
+    ],
+    "activationEvents": [
+        "onLanguage:json"
+    ],
+    "main": "./out/extension.js",
+    "contributes": {},
+    "scripts": {
+        "vscode:prepublish": "yarn run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "pretest": "yarn run compile",
+        "test": "node ./out/test/runTest.js"
+    },
+    "devDependencies": {
+        "@types/glob": "^7.1.1",
+        "@types/mocha": "^5.2.7",
+        "@types/node": "^12.11.7",
+        "@types/vscode": "^1.41.0",
+        "mocha": "^6.2.2",
+        "tslint": "^5.20.0",
+        "typescript": "^3.6.4",
+        "vscode-test": "^1.2.2"
+    },
+    "dependencies": {
+        "lodash.debounce": "^4.0.8"
+    }
 }
