--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Go to npm/composer package folder quickly",
     "publisher": "ctf0",
     "repository": "https://github.com/ctf0/vscode-goto-package",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "engines": {
-        "vscode": "^1.41.0"
+        "vscode": "^1.51.0"
     },
     "categories": [
         "Other"
@@ -39,7 +39,7 @@
             "type": "object",
             "title": "Goto Package",
             "properties": {
-                "goto_package.pMList": {
+                "gotoPackage.packageManagersList": {
                     "type": "array",
                     "default": [
                         {
@@ -76,14 +76,14 @@
         "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "@types/glob": "^7.1.1",
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^12.11.7",
-        "@types/vscode": "^1.41.0",
-        "mocha": "^6.2.2",
-        "tslint": "^5.20.0",
-        "typescript": "^3.6.4",
-        "vscode-test": "^1.2.2"
+        "@types/glob": "^7.1.3",
+        "@types/mocha": "^8.0.4",
+        "@types/node": "^14.14.10",
+        "@types/vscode": "^1.51.0",
+        "mocha": "^8.2.1",
+        "tslint": "^5.20.1",
+        "typescript": "^4.1.2",
+        "vscode-test": "^1.4.1"
     },
     "dependencies": {
         "lodash.debounce": "^4.0.8"
