--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Go to npm/composer package folder quickly",
     "publisher": "ctf0",
     "repository": "https://github.com/ctf0/vscode-goto-package",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "engines": {
         "vscode": "^1.53.0"
     },
@@ -83,16 +83,17 @@
         "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "@types/glob": "^7.1.3",
-        "@types/mocha": "^8.2.1",
-        "@types/node": "^14.14.31",
+        "@types/glob": "^7.2.0",
+        "@types/lodash": "^4.14.180",
+        "@types/mocha": "^9.1.0",
+        "@types/node": "^17.0.23",
         "@types/vscode": "^1.53.0",
-        "mocha": "^8.3.0",
+        "mocha": "^9.2.2",
         "tslint": "^5.20.1",
-        "typescript": "^4.2.2",
+        "typescript": "^4.6.3",
         "vscode-test": "^1.5.1"
     },
     "dependencies": {
-        "lodash.debounce": "^4.0.8"
+        "lodash": "^4.17.21"
     }
 }
