--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Go to npm/composer package folder quickly",
     "publisher": "ctf0",
     "repository": "https://github.com/ctf0/vscode-goto-package",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "engines": {
-        "vscode": "^1.52.0"
+        "vscode": "^1.53.0"
     },
     "categories": [
         "Other"
@@ -44,9 +44,11 @@
                     "default": [
                         {
                             "url": "https://npmjs.com/package/",
+                            "registry": "npm",
                             "cmnd": "npm uninstall",
-                            "file": "package.json",
+                            "file_to_search": "package.json",
                             "file_to_open": "package.json",
+                            "pkg_info_file": {},
                             "folder": "node_modules",
                             "regex": "(d|devD|peerD)ependencies\": {",
                             "pkg_name_regex": "\"(\\S*)\": ",
@@ -54,9 +56,14 @@
                         },
                         {
                             "url": "https://packagist.org/packages/",
+                            "registry": "packagist",
                             "cmnd": "composer remove",
-                            "file": "composer.json",
+                            "file_to_search": "composer.json",
                             "file_to_open": "composer.json",
+                            "pkg_info_file": {
+                                "file": "vendor/composer/installed.json",
+                                "key": "packages"
+                            },
                             "folder": "vendor",
                             "regex": "require(-dev)?\": {",
                             "pkg_name_regex": "\"(\\S*)\": ",
@@ -77,13 +84,13 @@
     },
     "devDependencies": {
         "@types/glob": "^7.1.3",
-        "@types/mocha": "^8.2.0",
-        "@types/node": "^14.14.16",
-        "@types/vscode": "^1.52.0",
-        "mocha": "^8.2.1",
+        "@types/mocha": "^8.2.1",
+        "@types/node": "^14.14.31",
+        "@types/vscode": "^1.53.0",
+        "mocha": "^8.3.0",
         "tslint": "^5.20.1",
-        "typescript": "^4.1.3",
-        "vscode-test": "^1.4.1"
+        "typescript": "^4.2.2",
+        "vscode-test": "^1.5.1"
     },
     "dependencies": {
         "lodash.debounce": "^4.0.8"
