--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Go to npm/composer package folder quickly",
     "publisher": "ctf0",
     "repository": "https://github.com/ctf0/vscode-goto-package",
-    "version": "0.1.2",
+    "version": "0.2.0",
     "engines": {
-        "vscode": "^1.53.0"
+        "vscode": "^1.68.0"
     },
     "categories": [
         "Other"
@@ -19,7 +19,7 @@
     "activationEvents": [
         "onLanguage:json"
     ],
-    "main": "./out/extension.js",
+    "main": "./out/main",
     "contributes": {
         "commands": [
             {
@@ -76,22 +76,23 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "pretest": "npm run compile",
-        "test": "node ./out/test/runTest.js"
+        "vscode:prepublish": "npm run esbuild-base -- --minify",
+        "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+        "esbuild": "npm run esbuild-base -- --sourcemap",
+        "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+        "watch": "npm run vscode:prepublish",
+        "test-compile": "tsc -p ./"
     },
     "devDependencies": {
-        "@types/glob": "^7.2.0",
-        "@types/lodash": "^4.14.180",
-        "@types/mocha": "^9.1.0",
-        "@types/node": "^17.0.23",
-        "@types/vscode": "^1.53.0",
-        "mocha": "^9.2.2",
-        "tslint": "^5.20.1",
-        "typescript": "^4.6.3",
-        "vscode-test": "^1.5.1"
+        "@types/glob": "^8.0.0",
+        "@types/lodash": "^4.14.188",
+        "@types/node": "^18.11.9",
+        "@types/vscode": "^1.68.0",
+        "@typescript-eslint/eslint-plugin": "^5.42.0",
+        "@typescript-eslint/parser": "^5.42.0",
+        "esbuild": "^0.15.13",
+        "eslint": "^8.27.0",
+        "typescript": "^4.8.4"
     },
     "dependencies": {
         "lodash": "^4.17.21"
