--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Go to npm/composer package folder quickly",
     "publisher": "ctf0",
     "repository": "https://github.com/ctf0/vscode-goto-package",
-    "version": "0.2.5",
+    "version": "0.2.6",
     "engines": {
         "vscode": "^1.68.0"
     },
@@ -63,17 +63,12 @@
         "test-compile": "tsc -p ./"
     },
     "devDependencies": {
-        "@types/glob": "^8.0.0",
-        "@types/lodash": "^4.14.188",
-        "@types/node": "^18.11.9",
+        "@types/node": "^18.11.18",
         "@types/vscode": "^1.68.0",
-        "@typescript-eslint/eslint-plugin": "^5.42.0",
-        "@typescript-eslint/parser": "^5.42.0",
-        "esbuild": "^0.15.13",
-        "eslint": "^8.27.0",
-        "typescript": "^4.8.4"
+        "esbuild": "^0.17.5",
+        "typescript": "^4.9.4"
     },
     "dependencies": {
-        "lodash": "^4.17.21"
+        "lodash.debounce": "^4.0.8"
     }
 }
