--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Go to npm/composer package folder quickly",
     "publisher": "ctf0",
     "repository": "https://github.com/ctf0/vscode-goto-package",
-    "version": "0.2.6",
+    "version": "0.2.7",
     "engines": {
-        "vscode": "^1.68.0"
+        "vscode": "^1.86.0"
     },
     "categories": [
         "Other"
@@ -55,18 +55,17 @@
         }
     },
     "scripts": {
-        "vscode:prepublish": "npm run esbuild-base -- --minify",
+        "vscode:prepublish": "npm run esbuild-base -- --pure:console.log --minify",
         "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
         "esbuild": "npm run esbuild-base -- --sourcemap",
         "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
-        "watch": "npm run vscode:prepublish",
-        "test-compile": "tsc -p ./"
+        "watch": "npm run esbuild"
     },
     "devDependencies": {
-        "@types/node": "^18.11.18",
-        "@types/vscode": "^1.68.0",
-        "esbuild": "^0.17.5",
-        "typescript": "^4.9.4"
+        "@types/node": "^22.6.1",
+        "@types/vscode": "^1.86.0",
+        "esbuild": "^0.24.0",
+        "typescript": "^5.6.2"
     },
     "dependencies": {
         "lodash.debounce": "^4.0.8"
